// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ConcentricSpin (a) analytic UV fold over a generator > folds ConcentricSpin.uvRemap into the generator sample coordinate (inline, no RTT); reads _animTime > final-pass-uvremap 1`] = `
"fn edgeClampUV(uv: vec2f) -> vec2f {
  return clamp(uv, vec2f(), vec2f(1));
}

fn legacySinHash11(x: f32) -> f32 {
  return ((fract((sin((x * 12.9898f)) * 43758.5453f)) - 0.5f) * 2f);
}

fn csRotateUV(uv: vec2f, aspect: f32, center: vec2f, angle: f32) -> vec2f {
  let centerPos = vec2f(center.x, (1f - center.y));
  let dx = ((uv.x - centerPos.x) * aspect);
  let dy = (uv.y - centerPos.y);
  let cosA = cos(angle);
  let sinA = sin(angle);
  let rotX = ((dx * cosA) - (dy * sinA));
  let rotY = ((dx * sinA) + (dy * cosA));
  return vec2f(((rotX / aspect) + centerPos.x), (rotY + centerPos.y));
}

fn concentricSpinUV(center: vec2f, intensity: f32, rings: f32, smoothness: f32, seed: f32, speedRandomness: f32, animTime: f32, uv: vec2f, aspect: f32) -> vec2f {
  let centerPos = vec2f(center.x, (1f - center.y));
  let dx = ((uv.x - centerPos.x) * aspect);
  let dy = (uv.y - centerPos.y);
  let dist = length(vec2f(dx, dy));
  let ringCoord = (dist * rings);
  let ringIndex = floor(ringCoord);
  let ringFrac = fract(ringCoord);
  let maxAngle = (intensity * 0.017453292519943295f);
  let seedOffset = (seed * 0.137f);
  let staticA = (legacySinHash11((ringIndex + seedOffset)) * maxAngle);
  let staticB = (legacySinHash11(((ringIndex + 1f) + seedOffset)) * maxAngle);
  let ringSpeedA = mix(1f, legacySinHash11((ringIndex + 42.7f)), speedRandomness);
  let ringSpeedB = mix(1f, legacySinHash11(((ringIndex + 1f) + 42.7f)), speedRandomness);
  let animA = ((animTime * 0.25f) * ringSpeedA);
  let animB = ((animTime * 0.25f) * ringSpeedB);
  let totalA = (staticA + animA);
  let totalB = (staticB + animB);
  let wrapArg = ((totalB - totalA) + 3.141592653589793f);
  let diff = ((wrapArg - (6.283185307179586f * floor((wrapArg / 6.283185307179586f)))) - 3.141592653589793f);
  let halfEdge = ((smoothness * 0.5f) + 1e-3f);
  let blend = smoothstep((0.5f - halfEdge), (0.5f + halfEdge), ringFrac);
  let angle = (totalA + (diff * blend));
  return csRotateUV(uv, aspect, center, angle);
}

struct padded {
  _opacity: f32,
  _pad0: f32,
  _pad1: f32,
  _pad2: f32,
}

struct struct_1 {
  intensity: f32,
  rings: f32,
  smoothness: f32,
  seed: f32,
  speed: f32,
  speedRandomness: f32,
  edges: f32,
  center: vec2f,
  _opacity: f32,
  _animTime: f32,
}

struct padded_1 {
  seed: f32,
  _opacity: f32,
  _pad0: f32,
  _pad1: f32,
}

struct struct_2 {
  time: f32,
  viewportSize: vec2f,
  logicalViewportSize: vec2f,
  aspect: f32,
  pointer: vec2f,
  pointerActive: f32,
}

struct combined {
  n_root: padded,
  n_cs: struct_1,
  n_gen: padded_1,
  _sys: struct_2,
}

@group(0) @binding(0) var<uniform> uniforms: combined;

fn genBody(seed: f32, uv: vec2f) -> vec4f {
  return vec4f(uv.x, uv.y, seed, 1f);
}

fn linearToSrgb(color: vec3f) -> vec3f {
  let a = ((pow(color, vec3f(0.41666001081466675)) * 1.055f) - 0.055f);
  let b = (color * 12.92f);
  let factor = (color <= vec3f(0.0031308000907301903));
  return select(a, b, factor);
}

fn tone_linear(color: vec3f) -> vec3f {
  return vec3f(color.x, color.y, color.z);
}

struct final_Input {
  @location(0) uv: vec2f,
}

@fragment fn final_1(in: final_Input) -> @location(0)  vec4f {
  var uv = vec2f(in.uv.x, 1.0 - in.uv.y);
  let foldUV_0 = edgeClampUV(concentricSpinUV(uniforms.n_cs.center, uniforms.n_cs.intensity, uniforms.n_cs.rings, uniforms.n_cs.smoothness, uniforms.n_cs.seed, uniforms.n_cs.speedRandomness, uniforms.n_cs._animTime, uv, uniforms._sys.aspect));
  var composed_1 = genBody(uniforms.n_gen.seed, foldUV_0);
  return vec4f(linearToSrgb(tone_linear(composed_1.rgb)), composed_1.a);
}"
`;

exports[`ConcentricSpin (b) RTT filter path (fragment) > converts the child to a texture, samples the per-ring rotation, unpremultiplies > final-pass-fragment 1`] = `
"fn overComposite(base: vec4f, blended: vec3f, overlayAlpha: f32) -> vec4f {
  let baseWeight = (base.w * (1f - overlayAlpha));
  let finalAlpha = (overlayAlpha + baseWeight);
  let rgb = ((blended * overlayAlpha) + (base.xyz * baseWeight));
  return vec4f(rgb, finalAlpha);
}

fn blend_normal(base: vec4f, overlay2: vec4f, opacity: f32) -> vec4f {
  let overlayAlpha = (overlay2.w * opacity);
  return overComposite(base, overlay2.xyz, overlayAlpha);
}

fn unpremultiplyAlpha(color2: vec4f) -> vec4f {
  let alpha = color2.w;
  let straightRGB = select(vec3f(), (color2.xyz / alpha), (alpha > 1e-3f));
  return vec4f(straightRGB, alpha);
}

@group(1) @binding(0) var rtt_0: texture_2d<f32>;

@group(2) @binding(0) var linearClamp: sampler;

fn edgeMirrorUV(uv: vec2f) -> vec2f {
  let mirrorX = (abs(uv.x) % 2f);
  let mirrorY = (abs(uv.y) % 2f);
  return vec2f(select(mirrorX, (2f - mirrorX), (mirrorX >= 1f)), select(mirrorY, (2f - mirrorY), (mirrorY >= 1f)));
}

fn legacySinHash11(x: f32) -> f32 {
  return ((fract((sin((x * 12.9898f)) * 43758.5453f)) - 0.5f) * 2f);
}

fn csRotateUV(uv: vec2f, aspect: f32, center: vec2f, angle: f32) -> vec2f {
  let centerPos = vec2f(center.x, (1f - center.y));
  let dx = ((uv.x - centerPos.x) * aspect);
  let dy = (uv.y - centerPos.y);
  let cosA = cos(angle);
  let sinA = sin(angle);
  let rotX = ((dx * cosA) - (dy * sinA));
  let rotY = ((dx * sinA) + (dy * cosA));
  return vec2f(((rotX / aspect) + centerPos.x), (rotY + centerPos.y));
}

fn concentricSpinUV(center: vec2f, intensity: f32, rings: f32, smoothness: f32, seed: f32, speedRandomness: f32, animTime: f32, uv: vec2f, aspect: f32) -> vec2f {
  let centerPos = vec2f(center.x, (1f - center.y));
  let dx = ((uv.x - centerPos.x) * aspect);
  let dy = (uv.y - centerPos.y);
  let dist = length(vec2f(dx, dy));
  let ringCoord = (dist * rings);
  let ringIndex = floor(ringCoord);
  let ringFrac = fract(ringCoord);
  let maxAngle = (intensity * 0.017453292519943295f);
  let seedOffset = (seed * 0.137f);
  let staticA = (legacySinHash11((ringIndex + seedOffset)) * maxAngle);
  let staticB = (legacySinHash11(((ringIndex + 1f) + seedOffset)) * maxAngle);
  let ringSpeedA = mix(1f, legacySinHash11((ringIndex + 42.7f)), speedRandomness);
  let ringSpeedB = mix(1f, legacySinHash11(((ringIndex + 1f) + 42.7f)), speedRandomness);
  let animA = ((animTime * 0.25f) * ringSpeedA);
  let animB = ((animTime * 0.25f) * ringSpeedB);
  let totalA = (staticA + animA);
  let totalB = (staticB + animB);
  let wrapArg = ((totalB - totalA) + 3.141592653589793f);
  let diff = ((wrapArg - (6.283185307179586f * floor((wrapArg / 6.283185307179586f)))) - 3.141592653589793f);
  let halfEdge = ((smoothness * 0.5f) + 1e-3f);
  let blend = smoothstep((0.5f - halfEdge), (0.5f + halfEdge), ringFrac);
  let angle = (totalA + (diff * blend));
  return csRotateUV(uv, aspect, center, angle);
}

struct padded {
  _opacity: f32,
  _pad0: f32,
  _pad1: f32,
  _pad2: f32,
}

struct struct_1 {
  intensity: f32,
  rings: f32,
  smoothness: f32,
  seed: f32,
  speed: f32,
  speedRandomness: f32,
  edges: f32,
  center: vec2f,
  _opacity: f32,
  _animTime: f32,
}

struct padded_1 {
  seed: f32,
  _opacity: f32,
  _pad0: f32,
  _pad1: f32,
}

struct struct_2 {
  time: f32,
  viewportSize: vec2f,
  logicalViewportSize: vec2f,
  aspect: f32,
  pointer: vec2f,
  pointerActive: f32,
}

struct combined {
  n_root: padded,
  n_cs: struct_1,
  n_gen: padded_1,
  _sys: struct_2,
}

@group(0) @binding(0) var<uniform> uniforms: combined;

fn linearToSrgb(color: vec3f) -> vec3f {
  let a = ((pow(color, vec3f(0.41666001081466675)) * 1.055f) - 0.055f);
  let b = (color * 12.92f);
  let factor = (color <= vec3f(0.0031308000907301903));
  return select(a, b, factor);
}

fn tone_linear(color: vec3f) -> vec3f {
  return vec3f(color.x, color.y, color.z);
}

struct final_Input {
  @location(0) uv: vec2f,
}

@fragment fn final_1(in: final_Input) -> @location(0)  vec4f {
  var uv = vec2f(in.uv.x, 1.0 - in.uv.y);
  var composed_0 = blend_normal(vec4f(1.0, 1.0, 1.0, 0.0), unpremultiplyAlpha(textureSample(rtt_0, linearClamp, edgeMirrorUV(concentricSpinUV(uniforms.n_cs.center, uniforms.n_cs.intensity, uniforms.n_cs.rings, uniforms.n_cs.smoothness, uniforms.n_cs.seed, uniforms.n_cs.speedRandomness, uniforms.n_cs._animTime, uv, uniforms._sys.aspect)))), uniforms.n_cs._opacity);
  return vec4f(linearToSrgb(tone_linear(composed_0.rgb)), composed_0.a);
}"
`;
